--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>RapidEats - Sistema para Delivery</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="https://www.google.com/recaptcha/api.js?render=%VITE_RECAPTHCA_KEY%"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4HY5JVYRHK"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-4HY5JVYRHK');
+    </script>
   </head>
   <body>
     <div id="app"></div>
